fix: sidebar dropdown z-index issue

--- a/packages/assets/css/src/scss/_components/_sidebar/_elements/_sidebar-dropdown.scss
+++ b/packages/assets/css/src/scss/_components/_sidebar/_elements/_sidebar-dropdown.scss
@@ -16,6 +16,7 @@
 				position: relative;
 				margin-bottom: $spacing-lg;
 				display: none;
+				z-index: 1;
 
 				@include media(max-width, md) {
 					display: block;
